fix(ci): run cmake --install from build dir to fix AppImage path

--- a/.github/workflows/jetson.yml
+++ b/.github/workflows/jetson.yml
@@ -87,7 +87,8 @@ jobs:
 
       # ── 8. Crea AppImage ──────────────────────────────────
       - name: Create AppImage
-        run: cmake --install ${{ runner.temp }}/build --config Release
+        working-directory: ${{ runner.temp }}/build
+        run: cmake --install . --config Release
 
       # ── 9. Trova e rinomina l'AppImage ────────────────────
       - name: Rename AppImage
